[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38, py39, py310, py311, mypy, coverage

[gh-actions]
python =
    3.8: py38
    3.9: py39
    3.10: py310
    3.11: py311, mypy, coverage

[testenv:coverage]
deps =
  coverage
  tqdm

commands = 
  coverage run --parallel-mode --concurrency=multiprocessing test_parmap.py
  coverage combine
  coverage report
  coverage xml

[testenv:mypy]
deps = 
  mypy
  tqdm
commands = 
  mypy -p parmap

[testenv]
deps = pytest

commands = pytest {posargs} # substitute with tox' positional arguments
"""

