[project]
name = "parmap"
version = "1.7.0"
authors = [
  { name="Sergio Oller", email="sergioller@gmail.com" },
]
description = "map and starmap implementations passing additional arguments and parallelizing if possible"
license = "Apache-2.0"
readme = "README.rst"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
"Homepage" = "https://github.com/zeehio/parmap"
"Bug Tracker" = "https://github.com/zeehio/parmap/issues"

[project.optional-dependencies]
progress_bar = ["tqdm>=4.8.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
ignore-vcs = true
include = [
  "parmap",
  "*.txt",
  "README.rst",
  "ChangeLog",
  "docs/*.rst",
  "docs/conf.py",
  "docs/Makefile",
  "docs/make.bat",
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38, py39, py310, py311, mypy, coverage

[gh-actions]
python =
    3.8: py38
    3.9: py39
    3.10: py310
    3.11: py311, mypy, coverage

[testenv:coverage]
deps =
  coverage
  tqdm

commands = 
  coverage run --parallel-mode --concurrency=multiprocessing test_parmap.py
  coverage combine
  coverage report
  coverage xml

[testenv:mypy]
deps = 
  mypy
  tqdm
commands = 
  mypy -p parmap

[testenv]
deps = pytest

commands = pytest {posargs} # substitute with tox' positional arguments
"""

