[metadata]
name = parmap
version = 1.5.3.9000
description = map and starmap implementations passing additional arguments and parallelizing if possible
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Sergio Oller
author_email = sergioller@gmail.com
license = APACHE-2.0
url = https://github.com/zeehio/parmap
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10


[options]
packages = parmap

[options.extras_require]
progress_bar = tqdm>=4.8.4

[bdist_wheel]
universal=1

